Volvi a una tipografia menos controversial

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: Courier;
+    font-family: ARial;
     color: rgb(40, 127, 161);
     font-size:16px;
     margin: 0;
