--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     text-align: center;
     font-family: ARial;
-    color: rgb(40, 127, 161);
+    color: red;
     font-size:16px;
     margin: 0;
     padding:0
