--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,3 +29,9 @@ body{
 #container h1{
 font-size: 20px;
 }
+#footer{
+    background: rgb(191, 238, 238);
+    color: rgb(0, 109, 128);
+    text-align: center;
+    padding: 0.5em;
+}
