--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,7 +44,7 @@ body
 font-size: 20px;
 }
 #footer{
-    background: rgb(191, 238, 238);
+    background: #37488b;
     color: rgb(0, 109, 128);
     text-align: center;
     padding: 0.5em;
